categories overlap fixed

--- a/assets/styles/first-screen/archive-post.css
+++ b/assets/styles/first-screen/archive-post.css
@@ -63,6 +63,9 @@ article {
     top:-12px;
     z-index:2;
     padding:12px;
+    max-width:100%;
+    overflow:hidden;
+    text-overflow:ellipsis;
     font-size:18px;
     font-weight:700;
     letter-spacing:0.5px;
