--- a/assets/styles/post.css
+++ b/assets/styles/post.css
@@ -88,6 +88,9 @@
     top:-12px;
     z-index:2;
     padding:12px;
+    max-width:100%;
+    overflow:hidden;
+    text-overflow:ellipsis;
     font-size:16px;
     font-weight:700;
     letter-spacing:0.5px;
